`Simulation.onRecipeSelected`
Refactored `RequestPolicy.popRequest` to `selectRequest` which doesn't modify the list.